--- a/TeoriaDeNumeros/TeoriaDeNumeros.tex
+++ b/TeoriaDeNumeros/TeoriaDeNumeros.tex
@@ -230,6 +230,92 @@
                     \end{SmallIndentation}
 
             \end{itemize}
+
+
+
+
+
+        % ==================================
+        % ======   PROPIEDADES     =========
+        % ==================================
+        \clearpage
+        \subsection*{Propiedades de Divisilibidad}
+
+            \begin{itemize}
+
+                \item $b|b$
+
+                    % ======== DEMOSTRACION ========
+                    \begin{SmallIndentation}[1em]
+                        \textbf{Demostración}:
+
+                        Basta con ver que si $a = b$ entonces $b = bq$, por lo tanto $q = 1$.
+                        Y listo, $1 \in \Integers$.
+
+                    \end{SmallIndentation}
+
+                \item $b|0$
+
+                    % ======== DEMOSTRACION ========
+                    \begin{SmallIndentation}[1em]
+                        \textbf{Demostración}:
+
+                        Basta con ver que si $a = 0$ entonces $0 = bq$, por lo tanto $q = 0$.
+                        Y listo, $0 \in \Integers$.
+
+                    \end{SmallIndentation}
+
+                \item $1|a$ y también $-1|a$
+
+                    % ======== DEMOSTRACION ========
+                    \begin{SmallIndentation}[1em]
+                        \textbf{Demostración}:
+
+                        Basta con ver que si $b = \pm 1$ entonces $a = \pm q$, por lo tanto $q = \pm a$.
+                        Y listo, $\pm a \in \Integers$.
+
+                    \end{SmallIndentation}
+            
+                \item $0|a$ si y solo $a=0$
+
+                    % ======== DEMOSTRACION ========
+                    \begin{SmallIndentation}[1em]
+                        \textbf{Demostración}:
+
+                        Basta con ver que tenemos $a = 0q$, esto es lo mismo que $a = 0$.
+
+                    \end{SmallIndentation}
+
+                \item $b|1$ si y solo si $b=1$ ó $b=-1$
+
+                    % ======== DEMOSTRACION ========
+                    \begin{SmallIndentation}[1em]
+                        \textbf{Demostración}:
+
+                        Sabemos que $a=1=bq$, esto nos obliga a que $b=\frac{1}{q}$, ahora tenemos que
+                        recordar que $b, q \in \Integers$, por lo tanto $q=1$ o bien $q=-1$ que es lo
+                        mismo que decir que $b=1$ ó $b=-1$. 
+
+                    \end{SmallIndentation}
+
+
+                \item $b|a$ y $a|b$ si y solo si $a=\pm b$
+
+                    % ======== DEMOSTRACION ========
+                    \begin{SmallIndentation}[1em]
+                        \textbf{Demostración}:
+
+                        Sabemos que $a=bq_1$, y $b=aq_2$ por lo tanto podemos sustituir, 
+                        $a=(aq_2)q_1$ por lo tanto $1=(q_1)(q_2)$, que es lo mismo que
+                        $\frac{1}{q_2}=q_1$ ahora que para $q_1$ siga en los $\Integers$,
+                        $q_2 = \pm 1$ por lo tanto $q_1 = \pm \frac{1}{1} = \pm 1$ por
+                        lo tanto tenemos que $a = bq_1$ que es lo mismo que decir que $a = \pm b$.
+
+                    \end{SmallIndentation}
+
+
+            \end{itemize}
+
                 
 
 
